# test-2-extracao-infos-pdf-darf-exe-e-flask

./: .env.example  .gitignore  BUILD_EXE.md  CHECKLIST_DISTRIBUICAO.txt  COMECE_AQUI.md  CORRIGIR_BUILD.md  DEBUG_BUILD.bat  DOWNLOAD_MANUAL_MODELOS.md  Dockerfile  ExtratorDARF.spec  ExtratorDARF_Fallback.spec  GERAR_EXE_COMPLETO.bat  GERAR_EXE_DEBUG.bat  GUIA_RAPIDO_USUARIO.md  GUIA_UV_PYTHON312.md  INSTRUCOES_DEBUG.md  INSTRUCOES_EXECUTAR_BUILD.md  INSTRUCOES_GERAR_EXE.md  INSTRUCOES_MODELOS.md  LEIA-ME-PRIMEIRO.txt  ONDE_ARQUIVO_SALVO.md  PROXIMOS_PASSOS.md  README.md  README_DISTRIBUICAO.md  README_EXE.md  README_EXE_PYQT6.md  README_PYWEBVIEW.md  RESUMO_CORRECOES.md  RESUMO_IMPLEMENTACAO.md  RESUMO_IMPLEMENTACAO_PYQT6.md  SOLUCAO_FLASK_NOT_FOUND.md  SOLUCAO_PYTHONNET.md  SOLUCAO_PYTHON_314.md  SOLUCAO_PYTHON_314_RAPIDOCR.md  TESTE_BUILD_SIMPLES.bat  baixar_modelos_manual.bat  build_exe.bat  build_exe_com_venv.bat  build_exe_fallback.bat  build_exe_fallback_debug.bat  (+29 more)
.github/workflows/: build.yaml
app/: __init__.py  config.py  models.py  models_direct.py
app/database/: __init__.py  db_session.py  direct.py
app/gui/: __init__.py  main_window.py  rules_widget.py  upload_widget.py  widgets.py
app/routes/: __init__.py  api.py  main.py
app/services/: __init__.py  excel_generator.py  pdf_parser.py
app/static/css/: style.css
app/templates/: index.html
app/utils/: __init__.py  errors.py  formatters.py  validators.py
migrations/versions/: ffc05ed927fa_initial_migration.py
